resolve alignment issue on signin and signup

--- a/src/client/styles/styles.css
+++ b/src/client/styles/styles.css
@@ -10,15 +10,17 @@ body {
 }
 
 #login {
-  margin-top: 50px;
+  padding-top: 50px;
   text-align: center;
   width: 300px;
+  margin: auto;
 }
 
 #signup {
-  margin-top: 50px;
+  padding-top: 50px;
   text-align: center;
   width: 300px;
+  margin: auto;
 
 }
 
